--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cozy-konnector-template",
+  "name": "cozy-konnector-tracemob",
   "version": "1.0.0",
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git@github.com:konnectors/template.git"
+    "url": "git@github.com:konnectors/tracemob.git"
   },
   "keywords": [],
   "author": "Cozy Cloud",
