publish: test: Add some tests
generated from commit bb85b2b1602468864ab822b49beb61ced49713c0

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "dev": "cozy-konnector-dev",
     "standalone": "cozy-konnector-standalone",
     "pretest": "npm run clean",
+    "test": "jest",
     "clean": "rm -rf ./data",
     "build": "webpack",
     "lint": "eslint --fix .",
     "deploy": "git-directory-deploy --directory build/ --branch ${DEPLOY_BRANCH:-build} --repo=${DEPLOY_REPOSITORY:-$npm_package_repository_url}",
-    "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build})",
+    "cozyPublish": "cozy-app-publish --token $REGISTRY_TOKEN --build-commit $(git rev-parse ${DEPLOY_BRANCH:-build}) --space larochelle --verbose",
     "travisDeployKey": "./bin/generate_travis_deploy_key"
   },
   "dependencies": {
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "cozy-jobs-cli": "1.15.9",
-    "cozy-konnector-build": "1.1.7"
+    "cozy-konnector-build": "1.1.7",
+    "jest": "^26.6.3"
   }
 }
